abstract class AppStrings {
  static const String appName = "SPEEDY CHOW";
  static const String appVersion = "Version 2.1.0";
  static const String skip = "Skip";
  static const String next = "Next";
  static const String startEnjoying = "Start enjoying";
  static const String splashTagline =
      "As fast as lightning,\nas delicious as thunder!";
  static const String welcomeTo = "Welcome to";
  static const String letsYouIn = "Let's you in";
  static const String continueWithFacebook = "Continue with Facebook";
  static const String continueWithGoogle = "Continue with Google";
  static const String continueWithApple = "Continue with Apple";
  static const String or = "Or";
  static const String signInWithPassword = "Sign in with password";
  static const String login = "Login";
  static const String signIn = "Sign in";
  static const String registration = "Registration";
  static const String register = "Register";
  static const String signUp = "Sign up";
  static const String dontHaveAccount = "Don't have an account?";
  static const String alreadyHaveAccount = "Already have an account?";
  static const String email = "Email";
  static const String password = "Password";
  static const String rememberMe = "Remember me";
  static const String forgotPassword = "Forgot Password";
  static const String orSignIn = "or Sign in with";
  static const String orSignUp = "or Sign up with";
  static const String verification = "Verification";
  static const String verify = "Verify";
  static const String codeHasBeenSentTo = "Code has been sent to ";
  static const String didntReceiveCode = "Didn't receive code?";
  static const String resendCode = "Resend Code";
  static const String codeInvalid = "Code Invalid";
  static const String pleaseEnterAllDigits = "Please enter all digits";
  static const String backToSignIn = "Back to Sign In";
  static const String createNewPassword = "Create New Password";
  static const String createYourNewPassword = "Create Your New Password";
  static const String newPassword = "New Password";
  static const String confirmNewPassword = "Confirm New Password";
  static const String passwordUpdatedSuccessfully =
      "Password updated successfully! Please login.";
  static const String continueText = "Continue";
  static const String pleaseEnterEmail = "Please enter your email";
  static const String pleaseEnterValidEmail = "Please enter a valid email";
  static const String pleaseEnterPassword = "Please enter your password";
  static const String passwordTooShort =
      "Password must be at least 6 characters";
  static const String pleaseConfirmPassword = "Please confirm your password";
  static const String passwordsDoNotMatch = "Passwords do not match";
  static const String pleaseFillAllFieldsCorrectly =
      "Please fill all fields correctly.";
  // --- Home Screen ---
  static const String home = "Home";
  static const String deliverTo = "Deliver to";
  static const String selectYourLocation = "Select Your Location";
  static const String search = "Search";
  static const String more = "More";
  static const String iceCreamDay = "ICE CREAM DAY";
  static const String getYourSweetIceCream = "GET YOUR SWEET\nICE CREAM";
  static const String fortyPercentOff = "40% OFF";
  static const String greenDay = "GREEN DAY";
  static const String upToSixtyPercentOff = "UP TO\n60% OFF";
  static const String saladCategory = "Salad Category";
  static const String couplesDeal = "COUPLES DEAL";
  static const String doubleHappiness = "Double\nhappiness.";
  static const String happyValentinesDay = "Happy Valentine's Day";
  // Special Offers
  static const String specialOffers = "Special Offers";
  static const String viewAll = "View All";

  // Search Screen Specific
  static const String recent = "Recent";
  static const String clearAll = "Clear All";
  static const String notFound = "Not Found";
  static const String trySearchingDifferentKeywords =
      "Try searching with different keywords or adjusting your filters.";
  static const String categories = "Categories";
  //button
  static const String orders = "Orders";
  static const String liked = "Liked";
  static const String notify = "Notify";
  static const String profile = "Profile";
  static const String active = "Active";
  static const String completed = "Completed";
  static const String cancelled = "Cancelled";
  static const String editProfile = "Edit Profile";
  static const String language = "Language";
  static const String privacyPolicy = "Privacy Policy";
  static const String helpCenter = "Help Center";
  static const String inviteFriends = "Invite Friends";
  static const String logOut = "Log Out";
  static const String darkMode = "Dark Mode";
  static const String messages = "Messages";
  static const String payments = "Payments";
  static const String security = "Security";
  static const String myPromotion = "My Promotions";
  static const String profileContinue = "Continue";
  static const String createNewPin = "Create New PIN";
  static const String addPinNumber =
      "Add a PIN number to make your account more secure.";
  static const String setYourFingerprint = "Set Your Fingerprint";
  static const String addFingerPrint =
      "Add a fingerprint to make your account more secure.";
  static const String congratulations = "Congratulations!";
  static const String accountIsReady =
      "Your account is ready to use. You will be redirected to the Home page in a few seconds.";
  static const String selectWhichContact =
      "Select which contact details should we use to reset your password";
  static const String writeReview = "Write Review";
  static const String downloadCertificate = "Download Certificate";
  static const String availableTests = "Available Tests";
  static const String completedTests = "Completed Tests";
  static const String startTest = "Start Test";
  static const String pleaseLeaveReview =
      "Please leave a review for your course";
  static const String generalNotification = "General Notification";
  static const String sound = "Sound";
  static const String promoDiscount = "Promo & Discount";
  static const String cashback = "Cashback";
  static const String appUpdates = "App Updates";
  static const String newServiceAvailable = "New Service Available";
  static const String newTipsAvailable = "New Tips Available";
  static const String payPal = "PayPal";
  static const String googlePay = "Google Pay";
  static const String applePay = "Apple Pay";
  static const String mastercardPay = "MasterCard Pay";
  static const String connected = "Connected";
  static const String addNewCard = "Add New Card";
  static const String cardNumber = "Card Number";
  static const String cardName = "Card Name";
  static const String expiryDate = "Expiry Date";
  static const String cvv = "CVV";
  static const String faceId = "Face ID";
  static const String biometricId = "Biometric ID";
  static const String googleAuthenticator = "Google Authenticator";
  static const String changePin = "Change PIN";
  static const String changePassword = "Change Password";
  static const String english = "English (US)";
  static const String russian = "Russian";
  static const String uzbek = "Uzbek";
  static const String suggested = "Suggested";
  static const String typesOfData = "1. Types of Data We Collect";
  static const String invite = "Invite";
  static const String invited = "Invited";
  static const String faq = "FAQ";
  static const String contactUs = "Contact Us";
  static const String general = "General";
  static const String account = "Account";
  static const String course = "Course";
  static const String wantToLogOut = "Are you sure you want to log out?";
  static const String yesLogOut = "Yes, Logout";
  static const String cancel = "Cancel";
  static const String tryDifferentKeywordsOrFilters = "";
  static const String enterEmailForVerificationCode =
      "Enter email verification code";
  static const String empty = "Empty";
  static const String notification = "Notification";
  static const String today = "Today";
  static const String yesterday = "Yesterday";
  static const String logout = "Logout";
  static const String logoutConfirmation = "Logout Confirmation";
  static const String areYouSureLogout = "Are you sure you want to log out?";
  static const String myLocations = "My Locations";
  static const String myPromotions = "My Promotions";
  static const String paymentMethods = "Payment Methods";
  static const String automaticallyUpdated = "Automatically Updated";
  static const String termOfService = "Term of Service";
  static const String aboutApp = "About App";
  static const String yes = "Yes";
  static const String pushNotification = "Push notification";
  static const String yourProfile = "Your Profile";
  static const String phoneNumber = "Phone Number";
  static const String pleaseEnterPhoneNumber = "Please enter your phone number";
  static const String fullName = "Full Name";
  static const String pleaseEnterFullName = "Please enter your full name";
  static const String dateOfBirth = "Date of Birth";
  static const String pleaseSelectDOB = "Please select your date of birth";
  static const String gender = "Gender";
  static const String pleaseSelectGender = "Please select your gender";
  static const String male = "Male";
  static const String female = "Female";
  static const String other = "Other";
  static const String yourLocation = "Your Location";
  static const String searchOrdersHint = "Search by Order ID or items";
  static const String all = "All";
  static const String notFoundOrders = "No orders found matching your search.";
  static const String noOrdersInThisCategory = "You have no orders in this status yet.";
  static const String notFoundMessages = "No messages found";
  static const String noMessagesYet = "You have no messages yet.";
  static const String deleteAllMessages = "Delete All Messages";
  static const String markAllAsRead = "Mark All as Read";
  static const String areYouSureDeleteAllMessages = "Are you sure you want to delete all messages? This action cannot be undone.";
  static const String delete = "Delete";
  static const String touchId = "Touch ID";
  static const String pinSecurity = "PIN Security";
  static const String help = "Help";
  static const String notFoundHelpTopics = "No help topics found matching your search.";
  static const String noHelpTopics = "No help topics available at the moment.";
  static const String appNameFull = "SPEEDY CHOW";
  static const String websiteUrl = "www.speedychow.com";
  static const String copyrightText = "Copyright © 2024 David (Vuong Huu Thien).\nAll rights reserved.";
  static const String cash = "Cash";
  static const String paypal = "PayPal";
  static const String apply = "Apply";
  static const String cardHolderName = "Cardholder Name";
  static const String validThru = "Valid Thru";
  static const String cvvCvc = "CVV / CVC";
  static const String enterCardNumber = "**** **** **** ****";
  static const String enterCardholderName = "Enter Cardholder Name";
  static const String mmYY = "MM/YY";
  static const String enterCvv = "Enter CVV";
  static const String save = "Save";
  static const String paymentSuccessful = "Payment Successful!";
  static const String paymentProcessedSuccessfully = "Your payment has been successfully processed.";
  static const String okGreat = "Ok. Great!";
  static const String cardholderNamePlaceholder = "CARDHOLDER NAME";
  static const String expiryDateShort = "VALID THRU";
  static const String validateCardNumber = 'Enter a valid 16-digit card number';
  static const String validateCardHolderName = 'Enter cardholder name';
  static const String validateExpiryDate = 'Enter MM/YY';
  static const String validateCvv = 'Enter CVV';
  static const String promotionInformation = "Promotion Information";
  static const String freeShipping = "FREE SHIPPING";
  static const String description = "Description";
  static const String duration = "Duration";
  static const String promoCode = "Promo Code";
  static const String applicableScope = "Applicable Scope";
  static const String discountAmount = "Discount Amount";
  static const String termsAndConditions = "Terms and Conditions";
  static const String passwordChangedSuccessLogin = "Your password has been changed successfully. You will be redirected to the Login page in a few seconds.";
  static const String addNewAddress = "Add New Address";
  static const String noLocationsAdded = "No locations added";
  static const String orderSummary = "Order Summary";
  static const String paymentMethod = "Payment method";
  static const String promotions = "Promotions";
  static const String subtotal = "Subtotal";
  static const String deliveryFee = "Delivery Fee";
  static const String discount = "Discount";
  static const String total = "Total";
  static const String free = "FREE";
  static const String unknown = "Unknown";
  static const String orderDetails = "Order Details";
  static const String cancelOrder = "Cancel Order";
  static const String trackOrder = "Track Order";
  static const String reorder = "Reorder";
  static const String reasonForCancellation = "Reason for Cancellation";
  static const String rateYourOrder = "Rate Your Order";
  static const String typeYourReview = "Type your review ...";
  static const String cancelOrderTitle = "Cancel Order";
  static const String cancelReasonChangeMind = "Change of mind";
  static const String cancelReasonFoundBetterPrice = "Found better price elsewhere";
  static const String cancelReasonDeliveryDelay = "Delivery delay";
  static const String cancelReasonIncorrectItem = "Incorrect item selected";
  static const String cancelReasonDuplicateOrder = "Duplicate order";
  static const String cancelReasonUnableToFulfill = "Unable to fulfill order";
  static const String cancelReasonOther = "Other reasons";
  static const String otherReasonHint = "Other reason ...";
  static const String submit = "Submit";
  static const String yourOrderCanceled = "Your Order Canceled";
  static const String orderCancellationInfo = "We're sorry to see your order go. 😔\nWe're always striving to improve, and we hope to serve you better next time!";
  static const String ok = "Ok";
  static const String notAvailable = "N/A";
  static const String addressNotProvided = "Address not provided";
  static const String noPromotionsApplied = "No Promotions Applied";
  static const String trackOrderTitle = "Order Tracking";
  static const String estimatedDeliveryTime = "Estimated Delivery Time";
  static const String myOrder = "My Order";
  static const String details = "Details";
  static const String orderCompletedStatus = "Order Completed";
  static const String createAccount = "Create Account";
  static const String orSignUpWith = "or Sign up with";
  }
















